--- a/package.json
+++ b/package.json
@@ -39,10 +39,13 @@
     "babel-plugin-dynamic-import-node": "2.3.3",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "eslint-config-prettier": "8.3.0",
     "eslint-plugin-kakaoent-plugin": "./lintRule",
+    "eslint-plugin-prettier": "4.0.0",
     "jest": "27.2.0",
     "lerna": "4.0.0",
     "postcss": "^8.3.6",
+    "prettier": "2.4.1",
     "sass": "1.41.1",
     "stylelint": "13.13.1",
     "stylelint-config-standard": "22.0.0",
