--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "tsc": "tsc",
     "test": "TZ=UTC jest --watchAll --maxWorkers=2",
-    "test_ci": "TZ=UTC jest --maxWorkers=2"
+    "test_ci": "TZ=UTC jest --maxWorkers=2",
+    "format": "npx prettier --write \"**/*.{ts,tsx}\" --config ../../.prettierrc"
   }
 }
