--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-transpile-modules": "8.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-modal": "3.14.3",
     "react-query": "3.25.0",
     "react-redux": "7.2.5"
   },
@@ -34,7 +35,9 @@
     "@testing-library/react-hooks": "7.0.2",
     "@types/jest": "27.0.1",
     "@types/lodash": "4.14.175",
+    "@types/node": "16.11.0",
     "@types/react": "17.0.21",
+    "@types/react-modal": "3.13.1",
     "autoprefixer": "^10.3.4",
     "babel-jest": "27.2.0",
     "babel-plugin-dynamic-import-node": "2.3.3",
@@ -45,7 +48,7 @@
     "eslint-plugin-prettier": "4.0.0",
     "jest": "27.2.0",
     "lerna": "4.0.0",
-    "postcss": "^8.3.6",
+    "postcss": "8.3.6",
     "prettier": "2.4.1",
     "sass": "1.41.1",
     "stylelint": "13.13.1",
