--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,8 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.stylelint": true
   },
-  "stylelint.enable": true
+  "stylelint.enable": true,
+  "editor.quickSuggestions": {
+    "strings": true
+  }
 }
