--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/node": "16.11.0",
     "@types/react": "17.0.21",
     "@types/react-modal": "3.13.1",
+    "@types/tailwindcss": "2.2.2",
     "autoprefixer": "^10.3.4",
     "babel-jest": "27.2.0",
     "babel-plugin-dynamic-import-node": "2.3.3",
