stage 프로젝트 추가 (#9)
* stage 프로젝트 추가

* dev script 추가

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "workspaces": [
     "packages/shared",
+    "packages/stage",
     "packages/todo"
   ],
   "dependencies": {
