--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@babel/core": "7.15.5",
     "@babel/preset-env": "7.15.6",
     "@babel/preset-typescript": "7.15.0",
+    "@testing-library/jest-dom": "5.15.0",
+    "@testing-library/react": "12.1.2",
     "@testing-library/react-hooks": "7.0.2",
     "@types/jest": "27.0.1",
     "@types/lodash": "4.14.175",
@@ -47,6 +49,7 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-kakaoent-plugin": "./lintRule",
     "eslint-plugin-prettier": "4.0.0",
+    "identity-obj-proxy": "3.0.0",
     "jest": "27.2.0",
     "lerna": "4.0.0",
     "postcss": "8.3.6",
