--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
     "kakaoent-plugin/no-date": "error",
     "kakaoent-plugin/no-next-router": "error",
     "kakaoent-plugin/disallowed-element": "error",
-    "react-hooks/exhaustive-deps": "error"
+    "react-hooks/exhaustive-deps": "error",
+    "no-unused-vars": "error"
   }
 }
