--- a/packages/stage/.eslintrc.json
+++ b/packages/stage/.eslintrc.json
@@ -1,3 +1,6 @@
 {
-  "extends": "../../.eslintrc.json"
+  "extends": "../../.eslintrc.json",
+  "rules": {
+    "@next/next/no-img-element": 0
+  }
 }
