svg 처리 변경 및 alias 추가 (#20)
* svg 처리 변경 및 alias 추가

* stage 에 추가 package 설치

* 리뷰 반영

* npm 모듈 exact 버전으로 변경

--- a/packages/stage/package.json
+++ b/packages/stage/package.json
@@ -12,5 +12,9 @@
     "test_ci": "TZ=UTC jest --maxWorkers=2",
     "lint": "next lint && stylelint **/*.scss --config .stylelintrc.js",
     "format": "npx prettier --write \"**/*.{ts,tsx}\" --config ../../.prettierrc"
+  },
+  "devDependencies": {
+    "babel-plugin-inline-react-svg": "2.0.1",
+    "babel-plugin-module-resolver": "4.1.0"
   }
 }
