className이 포함된 모든 property 에서 tailwind intellisense 동작하도록 추가 (#24)
* className이 포함된 모든 property 에서 tailwind intellisense 동작하도록 추가

* tailwind 자동완성 regex 오류 수정

* regex 모호성 제거

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,8 @@
   "stylelint.enable": true,
   "editor.quickSuggestions": {
     "strings": true
-  }
+  },
+  "tailwindCSS.experimental.classRegex": [
+    ["\\w*[cC]lassName=\"([^\"]*)\""]
+  ],
 }
