로컬 커밋할 때 lint 실행하도록 변경 (#14)
* pre-commit으로 lint 실행

* npx mrm lint-staged

* lint --workspaces

* npm run lint --workspaces

* shared에 lint 추가

* .gitignore에 .eslintcache 추가

* root package.json에서 scripts.lint 제거

* lint-staged 타겟에 stylelint 추가

* husky 설정에 nvm path 추가

* husky.sh 생성

* husky path 설정

* base 브랜치는 전체 프로젝트에 대해 테스트하도록 actions 수정

* eslint 가 제대로 실행되지 않는 문제 해결

* shared 에서는 타입스크립트도 검사하도록 ext 옵션 추가
* todo 에서는 정확한 원인은 모르겠지만 `-d` 옵션 넣어야 제대로 실행됨
* landvibe 기기에서는 커밋 시에 eslint 성공해도 `exit 1` 로 처리가되서 `exit 0` 를 명시적으로 입력
* shared 에서는 pages 폴더가 없어도 되므로 관련 룰 off 처리
* 우리는 CI 로 lint 를 체크하므로 build 에서 또 검사하지 않도록 ignoreDuringBuilds 옵션 추가 (옵션 안주면 build 시에도 eslint 실행됨)
* next 문서대로 `next/core-web-vitals` 이 마지막에 들어가도록 수정
  - 참고: https://nextjs.org/docs/basic-features/eslint#additional-configurations

Co-authored-by: landvibe.podo <landvibe.podo@kakaoent.com>

--- a/.github/workflows/testOnPackageBranch.yml
+++ b/.github/workflows/testOnPackageBranch.yml
@@ -33,10 +33,21 @@ jobs:
       - name: extract package name
         run: echo "PACKAGE_NAME=$(echo ${GITHUB_REF_NAME} | cut -d'/' -f 1)" >> $GITHUB_ENV
 
-      - run: npm run test_ci -w=${{env.PACKAGE_NAME}} -w=shared
-      - run: npm run lint -w=${{env.PACKAGE_NAME}} -w=shared
-      - run: npm run tsc -w=${{env.PACKAGE_NAME}} -w=shared
-      - run: npm run build -w=${{env.PACKAGE_NAME}} -w=shared
+      - name: Test on all workspaces
+        if: env.PACKAGE_NAME == 'base'
+        run: |
+          npm run test_ci --workspaces --if-present
+          npm run lint --workspaces --if-present
+          npm run tsc --workspaces --if-present
+          npm run build --workspaces --if-present
+
+      - name: Test only on the working workspace
+        if: env.PACKAGE_NAME != 'base'
+        run: |
+          npm run test_ci -w=${{env.PACKAGE_NAME}} -w=shared --if-present
+          npm run lint -w=${{env.PACKAGE_NAME}} -w=shared --if-present
+          npm run tsc -w=${{env.PACKAGE_NAME}} -w=shared --if-present
+          npm run build -w=${{env.PACKAGE_NAME}} -w=shared --if-present
 
       - name: Send slack when failed
         uses: 8398a7/action-slack@v3
