--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "main": "index.js",
   "scripts": {
     "start": "echo \"Error: no test specified\" && exit 1",
-    "format": "npx prettier --write \"**/*.{ts,tsx}\" --config .prettierrc"
+    "format": "npx prettier --write \"**/*.{ts,tsx}\" --config .prettierrc",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,scss}": "npm run lint --workspaces"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "workspaces": [
-    "packages/shared",
-    "packages/todo"
+    "./packages/*"
   ],
   "dependencies": {
     "axios": "0.22.0",
@@ -49,9 +52,11 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-kakaoent-plugin": "./lintRule",
     "eslint-plugin-prettier": "4.0.0",
+    "husky": "7.0.4",
     "identity-obj-proxy": "3.0.0",
     "jest": "27.2.0",
     "lerna": "4.0.0",
+    "lint-staged": "12.0.2",
     "postcss": "8.3.6",
     "prettier": "2.4.1",
     "sass": "1.41.1",
