--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -9,6 +9,7 @@
     "tsc": "tsc",
     "test": "TZ=UTC jest --watchAll --maxWorkers=2",
     "test_ci": "TZ=UTC jest --maxWorkers=2",
+    "lint": "eslint --cache . --ext .ts,.tsx,.js && stylelint **/*.scss --config .stylelintrc.js",
     "format": "npx prettier --write \"**/*.{ts,tsx}\" --config ../../.prettierrc"
   }
 }
