login 구현 / header에 login 기능 추가 (#23)
* login 구현 / header에 login 기능 추가

* textVariant 오류 수정

* layout 관련 file 이름 케이스 변경

* textVariant 오류 재수정

* refresh 이슈 수정 / 리뷰 반영

* console.log -> console.info 로 변경
* api 요청 시 Accept 헤더 추가

* 리뷰 반영

* console.log -> console.info 로 변경

* User 메뉴 구현 추가

* header 스타일 다른 이슈 수정

* 리뷰 반영

* query 유틸 분리
* callApi 의 getter 파라미터 default 속성 값 추가
* 공통 컴포넌트로 변경
* Anchor -> next/link 로 변경

--- a/packages/stage/package.json
+++ b/packages/stage/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3001",
+    "dev": "ts-node ./src/server.ts",
     "start": "next start -p 3001",
     "build": "next build",
     "real": "next start",
@@ -14,11 +14,14 @@
     "format": "npx prettier --write \"**/*.{ts,tsx}\" --config ../../.prettierrc"
   },
   "dependencies": {
-    "body-scroll-lock": "3.0.3"
+    "body-scroll-lock": "3.0.3",
+    "js-cookie": "3.0.1"
   },
   "devDependencies": {
+    "@types/body-scroll-lock": "3.1.0",
+    "@types/js-cookie": "^3.0.1",
     "babel-plugin-inline-react-svg": "2.0.1",
     "babel-plugin-module-resolver": "4.1.0",
-    "@types/body-scroll-lock": "3.1.0"
+    "ts-node": "10.4.0"
   }
 }
