--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm run start -w=$(grep PACKAGE_NAME .env | cut -d '=' -f2)",
+    "dev": "npm run dev -w=$(grep PACKAGE_NAME .env | cut -d '=' -f2)",
+    "build": "npm run build -w=$(grep PACKAGE_NAME .env | cut -d '=' -f2)",
+    "real": "npm run real -w=$(grep PACKAGE_NAME .env | cut -d '=' -f2)",
+    "tsc": "npm run tsc -w=$(grep PACKAGE_NAME .env | cut -d '=' -f2)",
+    "lint": "npm run lint -w=$(grep PACKAGE_NAME .env | cut -d '=' -f2)",
     "format": "npx prettier --write \"**/*.{ts,tsx}\" --config .prettierrc",
     "prepare": "husky install"
   },
@@ -47,6 +52,7 @@
     "autoprefixer": "^10.3.4",
     "babel-jest": "27.2.0",
     "babel-plugin-dynamic-import-node": "2.3.3",
+    "dotenv": "10.0.0",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "eslint-config-prettier": "8.3.0",
