--- a/packages/stage/package.json
+++ b/packages/stage/package.json
@@ -15,11 +15,14 @@
   },
   "dependencies": {
     "body-scroll-lock": "3.0.3",
+    "react-slick": "0.28.1",
+    "slick-carousel": "1.8.1",
     "js-cookie": "3.0.1"
   },
   "devDependencies": {
     "@types/body-scroll-lock": "3.1.0",
-    "@types/js-cookie": "^3.0.1",
+    "@types/js-cookie": "3.0.1",
+    "@types/react-slick": "0.23.7",
     "babel-plugin-inline-react-svg": "2.0.1",
     "babel-plugin-module-resolver": "4.1.0",
     "ts-node": "10.4.0"
