--- a/packages/stage/package.json
+++ b/packages/stage/package.json
@@ -15,9 +15,10 @@
   },
   "dependencies": {
     "body-scroll-lock": "3.0.3",
+    "js-cookie": "3.0.1",
+    "react-hook-form": "6.9.0",
     "react-slick": "0.28.1",
-    "slick-carousel": "1.8.1",
-    "js-cookie": "3.0.1"
+    "slick-carousel": "1.8.1"
   },
   "devDependencies": {
     "@types/body-scroll-lock": "3.1.0",
