--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "@types/react-flatpickr": "3.8.4",
     "@types/react-modal": "3.13.1",
     "@types/tailwindcss": "2.2.2",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.5.0",
     "autoprefixer": "^10.3.4",
     "babel-jest": "27.2.0",
     "babel-plugin-dynamic-import-node": "2.3.3",
@@ -74,6 +76,6 @@
     "stylelint-order": "4.1.0",
     "stylelint-scss": "3.21.0",
     "tailwindcss": "^2.2.15",
-    "typescript": "4.4.3"
+    "typescript": "^4.4.3"
   }
 }
